# HSE_RAG_Hackaton

./: .gitignore  README.md  deep-research-report.md  main_colab.ipynb  pyproject.toml  requirements-optional.txt  requirements.txt
configs/: README.md
reports/: README.md  decision_tokenization_lemmatization_20260624.md  folds_20260624T163054Z.csv  summary_20260624T152250Z.csv  summary_20260624T162036Z.csv  summary_20260624T163054Z.csv  summary_20260624T175149Z.csv  summary_20260624T184643Z.csv  summary_20260625T175100Z.csv  summary_rerank_20260625T183829Z.csv  summary_rerank_20260625T195719Z.csv
reports/metrics/: 20260624T152250Z.jsonl  20260624T162036Z.jsonl  20260624T163054Z.jsonl  20260624T175149Z.jsonl  20260624T184643Z.jsonl  20260624T192411Z.jsonl  20260625T175100Z.jsonl
scripts/: build_supervision.py  make_submission.py  run_experiments.py  run_rerank_experiments.py
src/legal_hse/: __init__.py  chunking.py  config.py  data.py  experiments.py  features.py  fusion.py  metrics.py  rerank_experiments.py  splits.py  submission.py  supervision.py  text.py
src/legal_hse/rerankers/: __init__.py  cross_encoder.py  flag.py  hf_sequence.py
src/legal_hse/retrievers/: __init__.py  base.py  bge_m3.py  bm25.py  dense.py  tfidf.py
tests/: test_bge_m3.py  test_experiments.py  test_fusion.py  test_metrics.py  test_submission.py  test_text.py
