[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legal-hse-retrieval"
version = "0.1.0"
description = "Experiment framework for legal document retrieval with Recall@5 evaluation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "joblib>=1.3",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dense = [
    "sentence-transformers>=3.0",
    "FlagEmbedding>=1.2.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
